[Apache Conf] added Loadmodule to apache conf file

--- a/config/apache.conf
+++ b/config/apache.conf
@@ -1,10 +1,13 @@
 <VirtualHost *:80>
-  ServerName organizor.org
-  #ServerAlias *.example.com
+  ServerName www.organizor.org
+  ServerAlias organizor.org
   DocumentRoot /home/deployer/apps/organizor/current/public
 
   # Redirect all requests that don't match a file on disk under DocumentRoot get proxied to Puma
   RewriteEngine On
+  # 2015jan19: senthil: added to load these modules
+  LoadModule lbmethod_byrequests_module /usr/lib/apache2/modules/mod_lbmethod_byrequests.so
+  LoadModule slotmem_shm_module /usr/lib/apache2/modules/mod_slotmem_shm.so
 
   <Proxy balancer://unicornservers>
     BalancerMember http://127.0.0.1:8080
@@ -28,6 +31,7 @@
 
   # Anything under public is open to the world
   <Directory /home/deployer/apps/organizor/current/public>
+    AllowOverride all
     Require all granted
     Options -MultiViews
     Satisfy Any
