--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: organizor_dev
+  database: organizor
   pool: 8
   username: root
   password: Sector@123
@@ -38,7 +38,7 @@ production:
   database: organizor
   pool: 8
   username: root
-  password: password
+  password: Sector@123 
   socket: /var/run/mysqld/mysqld.sock
 
 
