--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
   database: organizor
   pool: 8
   username: root
-  password: Sector@123
+  password: password
   socket: /var/run/mysqld/mysqld.sock
   local_infile: true
 # Warning: The database defined as "test" will be erased and
@@ -28,7 +28,7 @@ test: &test
   database: organizortest
   pool: 8
   username: root
-  password: Sector@123
+  password: password
   socket: /var/run/mysqld/mysqld.sock
 
 production:
@@ -38,7 +38,7 @@ production:
   database: organizor
   pool: 8
   username: root
-  password: Sector@123 
+  password: password 
   socket: /var/run/mysqld/mysqld.sock
 
 
